Create HWPX from server blank template
